--- a/src/main/resources/gemjar-config.json
+++ b/src/main/resources/gemjar-config.json
@@ -2,7 +2,7 @@
   "environment": "dev",
   "projectName": "ATHENA",
   "gemjarSubID": "test_id",
-  "gemjarUserName": "tchauhan1",
+  "gemjarUserName": "tchauhan",
   "gemjarToken": "3548cf51-4f28-4949-a8db-bdbb2f3027091673956073987",
   "jewelEntryUrl": "https://apis.gemecosystem.com/enter-point",
   "glueCode":"org.gemini.athena.StepDefinition",
